[tool.poetry]
name = "DNDCareers"
version = "0.10.0"
description = "Department of National Defense Recruitment Platform"
authors = ["Department of National Defense"]
license = "MIT"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
  | migrations
)\
'''

[tool.poetry.dependencies]
python = "^3.7"
aioredis = "==1.3.1"
asgiref = "==3.2.7"
astroid = "==2.4.0"
async-timeout = "==3.0.1"
attrs = "==19.3.0"
autobahn = "==20.4.3"
Automat = "==20.2.0"
azure = "==4.0.0"
Babel = "==2.8.0"
certifi = "==2020.4.5.1"
cffi = "==1.14.0"
channels = "==2.4.0"
channels-redis = "==2.4.2"
chardet = "==3.0.4"
constantly = "==15.1.0"
cryptography = "==3.2"
daphne = "==2.5.0"
defusedxml = "==0.6.0"
Django = "==2.2.13"
django-channels = "==0.7.0"
django-crispy-forms = "==1.9.0"
django-filter = "==2.2.0"
django-leaflet = "==0.26.0"
django-multiselectfield = "==0.1.12"
django-modeltranslation = "==0.15.2"
django-phone-field = "==1.8.0"
django-phonenumber-field = "==4.0.0"
django-storages = {version = "==1.9.1", extras = ["azure"]}
django-widget-tweaks = "==1.4.8"
djangorestframework = "==3.11.0"
django-rest-swagger = "==2.2.0"
django-simple-history = "==2.11.0"
notifications-python-client = "==5.7.0"
opentelemetry-sdk = "==0.13b0"
opentelemetry-azure-monitor = "==0.5b0"
opentelemetry-instrumentation-django = "==0.13b0"
hiredis = "==1.0.1"
html2text = "==2020.1.16"
hyperlink = "==19.0.0"
idna = "==2.9"
incremental = "==17.5.0"
isort = "==4.3.21"
lazy-object-proxy = "==1.4.3"
mammoth = "==1.4.11"
mccabe = "==0.6.1"
msgpack = "==0.6.2"
numpy = "==1.18.4"
oauthlib = "==3.1.0"
psycopg2-binary = "==2.8.5"
pandas = "==1.0.3"
pyasn1 = "==0.4.8"
pyasn1-modules = "==0.2.8"
pycparser = "==2.20"
PyHamcrest = "==2.0.2"
PyJWT = "==1.7.1"
pylint = "==2.5.0"
pyOpenSSL = "==19.1.0"
python-dateutil = "==2.8.1"
python3-openid = "==3.1.0"
pytz = "==2019.3"
PyYAML = "==5.3.1"
requests = "==2.23.0"
requests-oauthlib = "==1.3.0"
service_identity = "==18.1.0"
setuptools = "==40.3.0"
six = "==1.14.0"
social-auth-app-django = "==3.1.0"
social-auth-core = "==3.3.3"
sqlparse = "==0.3.1"
toml = "==0.10.1"
Twisted = "==20.3.0"
txaio = "==20.4.1"
typed-ast = "==1.4.1"
urllib3 = "==1.25.9"
wrapt = "==1.12.1"
XlsxWriter = "==1.2.8"
xlrd = ">=1.0.0"
"zope.interface" = "==5.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
